[FIX][UI] Fix bad color contrast in Plum's btn-info text.

--- a/themes/fivealive-lite/options/plum/scss/_variables.scss
+++ b/themes/fivealive-lite/options/plum/scss/_variables.scss
@@ -49,7 +49,7 @@ $btn-primary-badge-bg: #ffffff;
 // $btn-secondary-badge-color: ;
 // $btn-secondary-badge-bg: ;
 
-$btn-info-color: #ffffff;
+$btn-info-color: #222222;
 $btn-info-bg: #e5d7dc;
 $btn-info-border: #e5d0cf;
 // $btn-info-focus-color: ;
